fixed footer alignments for all elements. alignment of h3 is WIP.

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ Black: #101119 */
 header {
     background-color: #1FAD9D;
     color: #101119;
-    border-style: solid;
     border-radius: 10px;
     border-color: #1FAD9D;
 }
@@ -28,13 +27,14 @@ button {
     border-radius: 20px;
     border-color: #DD4055;
     height: 40px;
+    margin: 20px;
 }
 
 footer {
     background-color: #8783D1;
-    border-style: solid;
     border-radius: 20px;
     border: none;
+    color: #101119;
 }
 
 #logo {
@@ -42,7 +42,8 @@ footer {
     width: 5%;
     height: auto;
     position: absolute;
-    left: 30px;
+    left: 20px;
+    top: 15px;
 }
 
 #login {
@@ -87,34 +88,65 @@ footer {
 #footer-nav {
     display: inline-block;
     position: absolute;
-    right: 20px;
+    right: 30px;
 }
 
-#footer-nav-list {
-    text-decoration: none;
+#footer-nav-items {
     list-style-type: none;
+}
+
+#footer-nav-items > li {
     text-align: right;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.footer-links {
+    color: #101119;
 }
 
 #copyright {
+    padding: 2px 10px;
+}
+
+#copyright > p {
     text-align: left;
     font-style: italic;
     font-size: 11px;
-    margin: 0px 0px 10px 20px;
+    font-weight: 500;
 }
 
 #address {
     display: inline-block;
-    margin: 10px 0px 20px 0px;
+    position: absolute;
+    left: 30px;
 }
 
 #address-list {
+    padding: 0px;
+}
+
+#address-list > li {
     list-style-type: none;
     text-align: left;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 #donate {
     display: inline-block;
+    margin: 40px 40px;
 }
+
+h3 {
+    padding: 40px;
+    width: 30%;
+    height: auto;
+    background-color: #1FAD9D;
+    border-radius: 10px;
+    margin: auto;
+}
+
+
 /*
 https://www.w3schools.com/css/css3_images.asp#:~:text=Thumbnail-,Images,-Use%20the%20border*/
